fix the z-index of the notice block

--- a/Resources/public/less/admin.less
+++ b/Resources/public/less/admin.less
@@ -951,7 +951,7 @@ body.modal-open {
 
 .notice-block {
   top: 55px;
-  z-index: 100000;
+  z-index: 999;
   padding-left: 5px;
   padding-right: 30px;
 
